syntax = "proto3";

import "scalapb/scalapb.proto";

package com.github.jelmerk;

service IndexService {
  rpc Search (stream SearchRequest) returns (stream SearchResponse) {}
  rpc SaveIndex (SaveIndexRequest) returns (SaveIndexResponse) {}
  rpc Summary (SummaryRequest) returns (SummaryResponse) {}
}

message SearchRequest {
  Vector vector = 1;
  int32 k = 2;
}

message SearchResponse {
  repeated Result results = 1;
}

message Result {
  Id id = 1;
  Distance distance = 2;
}

message Id {
  oneof value {
    string string_id = 1;
    int64 long_id = 2;
    int32 int_id = 3;
  }
}

message Distance {
  oneof value {
    float float_distance = 1;
    double double_distance = 2;
  }
}

message Vector {
  oneof value {
    FloatArrayVector float_array_vector = 1;
    DoubleArrayVector double_array_vector = 2;
    SparseVector sparse_vector = 3;
    DenseVector dense_vector = 4;
  }
}

message FloatArrayVector {
  repeated float values = 1 [(scalapb.field).collection_type="Array"];
}

message DoubleArrayVector {
  repeated double values = 1 [(scalapb.field).collection_type="Array"];
}

message SparseVector {
  int32 size = 1;
  repeated int32 indices = 2 [(scalapb.field).collection_type="Array"];
  repeated double values = 3 [(scalapb.field).collection_type="Array"];
}

message DenseVector {
  repeated double values = 1 [(scalapb.field).collection_type="Array"];
}

message SaveIndexRequest {
  string path = 1;
}

message SaveIndexResponse {
  int64 bytes_written = 1;
}

message SummaryRequest {

}

message SummaryResponse {
  int32 size = 1;
}
